k8s/observability/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - grafana.labk3s.online
    secretName: grafana-tls
  rules:
  - host: grafana.labk3s.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-stack-grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - prometheus.labk3s.online
    secretName: prometheus-tls
  rules:
  - host: prometheus.labk3s.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-stack-kube-prometheus-prometheus
            port:
              number: 9090
